# core-backend

./: .dockerignore  .env-sample  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  TODO.md  docker-compose.yml  docker-entrypoint.sh
.github/workflows/: deploy.yml
assets/: mcp_catalog.json  skills_catalog.json
deploy/: README.md
deploy/ansible/: README.md  inventory.example.ini  playbook.yml
deploy/cloud-init/: README.md  user-data.yaml
deploy/docker/: README.md
deploy/docker-compose/: README.md  docker-compose.yml
deploy/kubernetes/: README.md  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml
docs/: secret-backends.md
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/lib/: AgentsView.svelte  Bell.svelte  BuilderView.svelte  CanvasView.svelte  Icon.svelte  IntegrationsView.svelte  LoginView.svelte  Logo.svelte  LogsView.svelte  MarketplaceView.svelte  McpView.svelte  MemoryGraph.svelte  MemoryView.svelte  RunView.svelte  SettingsView.svelte  SkillsView.svelte  Toasts.svelte  UsageView.svelte  VideoView.svelte  api.ts  discordHooks.ts  markdown.ts  (+2 more)
migrations/: 0001_init.sql  0002_marketplace.sql  0003_declarative.sql  0004_schedules.sql  0005_event_log.sql  0006_agent_icon.sql  0007_marketplace_api.sql  0008_agent_persona.sql  0009_jobs_synchronous.sql  0010_perf_indexes.sql  0011_users_rbac.sql  0012_secret_backend.sql  0013_inner_life.sql  0015_sandbox_backend.sql  0016_personalization.sql  0017_login_security.sql  0018_agent_layout.sql
src/: agentdef.rs  bootstrap.rs  config.rs  crypto.rs  db.rs  domain.rs  error.rs  main.rs  memory.rs  net.rs  queue.rs  sandbox.rs  scheduler.rs  secrets.rs  security.rs  state.rs  tools.rs
src/agent/: choreography.rs  engine.rs  events.rs  inner_life.rs  mod.rs  steps.rs  worker.rs
src/http/: agents.rs  approvals.rs  auth.rs  connectors.rs  health.rs  integrations.rs  jobs.rs  logs.rs  marketplace.rs  mcp.rs  memory.rs  mod.rs  objectives.rs  sandbox_settings.rs  schedules.rs  skills.rs  tts.rs  usage.rs  users.rs  vaults.rs  video.rs  webhooks.rs
src/llm/: canned.rs  claude_cli.rs  mod.rs  oneshot.rs  openai_compat.rs  registry.rs
src/seed/: windsurf-wissant.toml
(+4 files in other folders)
