[package]
name = "takoia-core"
version = "0.1.0"
edition = "2021"
description = "TakoIA core-backend: autonomous agent orchestrator (4-step loop)"
license = "BUSL-1.1"

[[bin]]
name = "takoia"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# Web
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tower = "0.4"
# DB
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "macros",
    "migrate",
    "uuid",
    "chrono",
    "json",
] }
# Hashing (API key digests)
sha2 = "0.10"
# HTTP client (LLM providers + connectors)
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# Common
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Errors
anyhow = "1"
thiserror = "1"
# Async trait objects (LlmProvider behind dyn)
async-trait = "0.1"
# Config
dotenvy = "0.15"
# Email (SMTP) integration — fully-functional send path
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder"] }
# Crypto for connector credentials
chacha20poly1305 = "0.10"
# Password hashing (multi-user auth)
argon2 = "0.5"
base64 = "0.22"
rand = "0.8"
# Native execution sandbox (Linux Landlock LSM, filesystem confinement)
landlock = "0.4"
# Scheduling
cron = "0.12"
# SSE / async streams
futures = "0.3"
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
# Embed frontend assets into the single binary (demo build)
rust-embed = { version = "8", features = ["mime-guess"], optional = true }
mime_guess = { version = "2", optional = true }

[features]
# Enable to embed frontend/dist into the binary for a single-file demo build.
embed-frontend = ["dep:rust-embed", "dep:mime_guess"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
